--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -32,6 +32,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.0",
     "yup": "^1.4.0"
   },
@@ -58,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
