--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "shortid": "^2.2.16",
     "typescript": "^4.4.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.0",
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/shortid": "^0.0.32",
     "@types/uuid": "^9.0.8"
   }
 }
