--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.11",
     "formik": "^2.4.6",
     "iquery": "^0.0.2",
+    "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/shortid": "^0.0.32",
     "@types/uuid": "^9.0.8"
   }
