--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "antd": "^5.18.1",
     "axios": "^1.6.8",
     "bootstrap": "^4.6.2",
     "cra-template-typescript": "1.2.0",
