--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -63,6 +63,10 @@
   "devDependencies": {
     "@types/jquery": "^3.5.30",
     "@types/shortid": "^0.0.32",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   }
 }
