--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "iquery": "^0.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
