--- a/air-bnb/package.json
+++ b/air-bnb/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.6",
     "iquery": "^0.0.2",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
